--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
     "start": "nodemon index.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^17.2.1",
+    "express": "^5.1.0",
     "mongoose": "^8.17.0",
-    "node": "^20.19.4",
+    "node": "^20.19.4"
+  },
+  "devDependencies": {
     "nodemon": "^3.1.10"
   }
 }
